2001-11-15  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_fun.c (bk_fun_exit): More info about implicit exits

	* lib/b_ioh.c (ioh_dequeue_byte): Abstract shared functionality
	into function.

2001-11-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_signal.c (bk_signal): conditionalize SA_SIGINFO, and
	document the problems with the current API if SA_SIGINFO exists
	and is used.

2001-11-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (ioht_block_other): Line misordering causing
	blocking to return invalid status codes, invalid command switch
	variable (switching on flags instead).
	(ioh_getlastbuf): Must offset for both inuse (read) and used
	(write)
	
	* lib/b_error.c (bk_error_iprint): File handles is another legal
	output source.

2001-11-14  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_ioh.c (bk_ioh_close): Ah silly boy.  You must check for a
	flag only in places where it can be found, not in other random
	flag variables in different flag-spaces.  I suppose Alex can make
	a good argument here about enums.  Hmm.

	* include/libbk.h (bk_debug_printbuf): Typo

2001-11-13  Seth Robertson  <seth@startide.sysdetect.com>

	* src/proto.c (main): You must use bk_general_debug_config *in place of*
	bk_debug_setconfig, not in addition to.

	* lib/b_signal.c (bk_signal): Common interface to async signal handlers

	* lib/b_relay.c: IOH relay code

	* lib/b_ioh.c (ioht_raw_other): Remove data from queue after freeing it.
	IOH now working (for some value of working) in RAW mode
	
	* test/test_ioh.c (relayer): Bug which caused us to trash memory

	* lib/b_error.c (bk_error_idump): Change order--less recent comes first

2001-11-13  Alexander Dupuy  <dupuy@sysdetect.com>

	* test/test_ioh.c (proginit): inet_aton returns zero on error
	(address_resolved): cast sockaddr * argument

2001-11-13  Seth Robertson  <seth@yeah.baka.org>

	* test/test_ioh.c: Add test program
	* lib/b_ioh.c: Add stdio functions

2001-11-12  Seth Robertson  <seth@yeah.baka.org>
